2007-10-28 Justin Palmer <justin@activereload.net>

	* test/test_notifications.rb,
	  Manifest.txt,
	  lib/rucola/rucola_support.rb,
	  lib/rucola/rucola_support/acts_as,
	  lib/rucola/rucola_support/acts_as.rb,
	  lib/rucola/rucola_support/acts_as/notifiable.rb,
	  test/test_acts_as.rb,
	  test/test_acts_as_notifiable.rb:

	Move acts_as notifiable parts to Rucola::Notifications and update tests.


2007-10-29 Eloy Duran <e.duran@superalloy.nl>

	* app_generators/rucola/templates/Rakefile.erb,
	  lib/rucola/nib.rb,
	  test/test_nib.rb:

	- Added Rucola::Nib::Classes#has_class?.
	- Rake task ib:update now loops through all
	  controllers and nibs and updates the class
	  definition if it finds the class in a nib.

2007-10-29 Eloy Duran <e.duran@superalloy.nl>

	* lib/rucola/rucola_support/acts_as/notifiable.rb,
	  test/test_acts_as_notifiable.rb:

	- Removed the acts_as_foo class method stuff.
	  This module should be mixed in by default.
	- Added ClassMethod#notify which will just
	  call a method when a notification is posted.
	- Cleaned up test file.

2007-10-28 Justin Palmer <justin@activereload.net>

	* Manifest.txt,
	  app_generators/rucola/templates/Rakefile.erb,
	  lib/rucola/rucola_support/acts_as.rb,
	  lib/rucola/rucola_support/acts_as/notifiable.rb,
	  lib/rucola/rucola_support/core_ext.rb,
	  lib/rucola/rucola_support/core_ext/objc.rb,
	  lib/rucola/rucola_support/core_ext/objc/nsobject.rb,
	  lib/rucola/rucola_support/core_ext/ruby.rb,
	  lib/rucola/rucola_support/core_ext/ruby/string.rb,
	  rucola_generators/controller/controller_generator.rb,
	  rucola_generators/window_controller/window_controller_generator.rb,
	  test/test_acts_as.rb,
	  test/test_acts_as_notifiable.rb,
	  test/test_core_ext.rb,
	  test/test_helper.rb,
	  test/test_objc_core_ext.rb,
	  test/test_window_controller.rb:

	Update test to include rucola_support instead of individual files.  All test files should included the 
	test helper.  Notifiable test fail, but I'm working on that.
