@@ -1,4 +1,3 @@
-.rake_tasks
 ChangeLog
 History.txt
 License.txt
