@@ -1,0 +1,1 @@
+require 'rucola_support/notifications/notifications'
